--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -21,8 +20,10 @@
     <input class="input" type="text">
     <button class="check-button">Click to Validate</button>
   </form>
-  <div class="hidden-incorrect">Проверьте длину введенного номера</div>
-  <div class="hidden-correct">Номер корректен</div>
+  <div class="labels">
+    <div class="hidden-incorrect">Проверьте длину введенного номера</div>
+    <div class="hidden-luhn">Проверьте корректность введенного номера</div>
+    <div class="hidden-correct">Номер корректен</div>
+  </div>
 </body>
-<script src="js/app.js"></script>
 </html>
